<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="kr.com.ticketpass.viewmodel.SignupViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDark">



        <TextView
            android:id="@+id/entrance_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/paybooc_medium"
            android:gravity="left"
            android:text="@string/entrance_time"
            android:textColor="@color/colorWarm"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/main_constraintLayout" />

        <EditText
            android:id="@+id/entrance_time_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_underline_white"
            android:clickable="true"
            android:focusable="false"
            android:fontFamily="@font/paybooc_medium"
            android:gravity="left|center_vertical"
            android:hint="@string/input_entrance_time"
            android:paddingStart="4dp"
            android:paddingLeft="4dp"
            android:paddingBottom="9dp"
            android:textColor="@color/colorWarm"
            android:textColorHint="@color/colorWarm"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/entrance_time_text" />

        <TextView
            android:id="@+id/event_time_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="32dp"
            android:fontFamily="@font/paybooc_medium"
            android:gravity="left"
            android:text="@string/event_time"
            android:textColor="@color/colorWarm"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/entrance_time_edittext" />

        <RelativeLayout
            android:id="@+id/event_time_layout"
            android:background="@drawable/edit_text_underline_white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_time_text"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/event_info_input_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_underline_white"
                android:fontFamily="@font/paybooc_medium"
                android:gravity="left|center_vertical"
                android:hint="@string/input_event_time"
                android:inputType="datetime"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:paddingBottom="9dp"
                android:textColor="@color/colorWarm"
                android:textColorHint="@color/colorWarm"
                android:textSize="18sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/event_info_register_button"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="288dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="55dp"
            android:background="@drawable/bt_shape_dark"
            android:fontFamily="@font/paybooc_medium"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@id/main_constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/event_time_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>